обновил стили для секции poem

--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
                 Буднями мчатся недели, года!<br>
                 Привычный уклад зимний праздник меняет,<br>
                 Когда вокруг ёлки, огни, суета!<br>
-                Так пусть в эти дни волшебство приключится,<br>
-                Магия праздничных, радостных дней!<br>
-                И сказка к вам в дверь в тот же миг постучится,<br>
-                Желания ваши исполнив скорей!
+                Так пусть в эти дни волшебство приключится.
             </div>
 
 
