--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="desc section" id="desc">
         <div class="desc__img-wrap section-col">
-            <img src="/img/pngwing.com (3).png" alt="" class="desc__img">
+            <img src="img/pngwing.com (3).png" alt="" class="desc__img">
         </div>
 
         <div class="desc__info section-col">
@@ -68,7 +68,7 @@
                 самостоятельных людей. Для тех представителей, которые постоянно развиваются и совершенствуются.</p>
         </div>
     </div>
-    <div class=" poem section " id="poem">
+    <div class=" poem  " id="poem">
 
 
         <h2 class="subbtitle poem__subbtitle">Новогодние поздравления</h2>
